Final Project Handling of vertical overflow(y-direction) by adding scrollbars in displaycodearea & textarea and sync both on textareascroll displaycodearea scrollbar was hidden (fix css for chrome,firefox,and ie HOTFIX: Found out that firefox doesnt support lookarounds so commented out highlighting of identifiers.. (will be refactored later)

--- a/JS-PROJECTS/finalProject/css/style.css
+++ b/JS-PROJECTS/finalProject/css/style.css
@@ -63,3 +63,12 @@ ul.autocomplete-ul li {
 	display: inline-block;
 	padding-right: 20px;
 }
+
+.remove-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.remove-scrollbar {
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+}
